		 CHANGES IN servr VERSION 0.12

MAJOR CHANGES

- `daemon_list()` returns server IDs instead of handles, so that it will work
  with httpuv >= v1.4.5.1 (rstudio/blogdown#365).

		 CHANGES IN servr VERSION 0.11

NEW FEATURES

- The default value of the `port` argument of `server_config()` can be set via
  the environment variable `R_SERVR_PORT`. If the environment variable does not
  exist, the global option `servr.port` will be used if set, e.g.,
  `options(servr.port = 4322)`. See `?servr::server_config` for details.

		 CHANGES IN servr VERSION 0.10

NEW FEATURES

- Added a function `browse_last()` to reopen the last browsed page.

MAJOR CHANGES

- The `daemon` argument in `server_config()` now defaults to `interactive()`, i.e., **servr** starts a daemonized server that does not block your interactive R session by default.

		 CHANGES IN servr VERSION 0.9

BUG FIXES

- The web browser may be opened too early (before the server is ready) (originally reported at rstudio/rstudio#2475).

		 CHANGES IN servr VERSION 0.8

NEW FEATURES

- added another implementation of the daemoinzed server based on the later package, since the previous implmentation based on `httpuv::startDaemonizedServer()` could crash the R session on Windows

		 CHANGES IN servr VERSION 0.7

NEW FEATURES

- added a new argument `watch` to `servr::httw()`

- exported the function `server_config()`

BUG FIXES

- files/directories that contain multibyte characters in path names cannot be served correctly (thanks, Hao Peng)

		 CHANGES IN servr VERSION 0.6

NEW FEATURES

- on 404 (page not found), 404.html will be displayed if it exists under the
  root directory

- improved the support for HTTP Range requests, e.g. servr can correctly serve
  MP4 videos now in major browsers including Safari

BUG FIXES

- servr should decode requested paths before reading them (https://github.com/rstudio/blogdown/issues/85)

		 CHANGES IN servr VERSION 0.5

NEW FEATURES
