@@ -1,5 +1,9 @@
 		 CHANGES IN servr VERSION 0.12
 
+NEW FEATURES
+
+- Exported the function `random_port()` to return an available random TCP port.
+
 MAJOR CHANGES
 
 - `daemon_list()` returns server IDs instead of handles, so that it will work
